# clinical-data-explorer

./: .env-example  .gitignore  ARCHITECTURE.md  Dockerfile  INSTALL.md  Makefile  QUICKSTART.md  README.md  app.py  chat_agent.py  chat_agent_message_cache.py  column_labels_simple.csv  config.py  data_analysis_mcp.py  extract_column_labels.py  pyproject.toml  pytest.ini  requirements.txt  start_servers.sh  start_servers_prod.sh
.cursor/rules/: how-to-build-domino-apps.mdc
.github/workflows/: build-dockerfile.yaml
backend/: __init__.py  app.py  auth.py  config.py  session.py  types.py
backend/prompts/: chat_system_prompt.md
backend/routes/: __init__.py  charts.py  chat.py  data.py  datasets.py  governance.py
backend/services/: __init__.py  chat_chart_specs.py  column_labels.py  data_file_cache.py  dataset_load_request_queue.py  datasets.py  download_file_metadata_cache.py  file_size_limits.py  governance.py  httpclient.py
chat_ui/: index.html  script.js  style.css
chat_ui/core/: api.js  dom.js  modals.js  state.js
chat_ui/modules/: chart-renderers.js  chat.js  column-labels.js  explore-charts.js  file-browser.js  filters.js  governance.js  table-view.js
chat_ui/styles/: chat.css  components.css  explore.css  layout.css  modals.css  responsive.css  (+2 more)
datasets/: BIG100K.parquet  adsl.sas7bdat  clinical1.parquet
mcp_server/: __init__.py  app.py  config.py  dataframe_cache.py  session.py  types.py
perf_test/: README.md  load_cde_other_dataset.py  test_all_practs_data_load_reqs.sh  test_data_load_req.sh  test_user_creds_example.txt
tests/: conftest.py
(+40 files in other folders)
