[project]
name = "data-buddy-pharma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.3.0",
    "pydantic-ai>=1.9.1",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "fastapi-mcp>=0.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "uvicorn>=0.22.0",
    "requests>=2.31.0",
    "cachetools>=5.5.2",
    # For parquet file support
    "pyarrow>=14.0.0",
    # For SAS file support (.sas7bdat and .xpt)
    "pyreadstat>=1.2.0",
    "dominodatalab[data]==2.0.0",
    "gunicorn>=25.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-playwright>=0.5",
    "httpx>=0.27",
    "playwright",
]
